add sign.go
