# src/docs/swagger.json
@@ -80,5 +80,19 @@
                 "responses": {}
             }
         }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        },
+        "OAuth2Application": {
+            "type": "oauth2",
+            "flow": "application",
+            "tokenUrl": "http://localhost:8080/realms/demo/protocol/openid-connect/token",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information",
+                "write": " Grants write access"
+            }
+        }
     }
 }
